feat: do not return default settings if requested name is not exist (#23)